// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TriState /> should render properly when checked 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 28px;
  height: 28px;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
  padding: 0;
}

.emotion-0 {
  color: #ffffff;
}

.emotion-0 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

<button
  className="emotion-1"
  onClick={[Function]}
  type="button"
>
  <svg
    className="emotion-0"
    data-file-name="checkmark.svg"
    width={28}
  />
</button>
`;

exports[`<TriState /> should render properly when partially checked 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 28px;
  height: 28px;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
  padding: 0;
}

.emotion-0 {
  color: #73b61c;
}

.emotion-0 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

<button
  className="emotion-1"
  onClick={[Function]}
  type="button"
>
  <svg
    className="emotion-0"
    data-file-name="checkboxpartial.svg"
    width={28}
  />
</button>
`;

exports[`<TriState /> should render properly when unchecked 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 28px;
  height: 28px;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
  padding: 0;
}

.emotion-0 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

<button
  className="emotion-1"
  onClick={[Function]}
  type="button"
>
  <svg
    className="emotion-0"
    data-file-name="checkmark.svg"
    width={28}
  />
</button>
`;
